--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "bun-create": {
+      "postinstall": "rm -rf .github"
+    }
   },
   "dependencies": {
     "pinia": "^3.0.3",
