--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vue": "^3.5.17"
   },
   "bun-create": {
-    "postinstall": "rm -rf .github"
+    "preinstall": "rm -rf .github"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
